<resources>
    <string name="app_name">My App</string>
    <string name="action_settings">Logout</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="test">test</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_shopping">Start Shopping</string>
    <string name="nav_item_shopping_cart">Shopping Cart</string>
    <string name="nav_item_card">My Card</string>
    <string name="nav_item_addresses">Address</string>
    <string name="nav_item_order_list">Order List</string>

    <string name="empty_shopping_cart">There currently are no items in your shopping cart."</string>
    <string name="empty_order_list">Your order is empty.</string>

    <string name="icon_item_home">ic_action_profile</string>
    <string name="icon_item_shopping">ic_action_add_shopping_cart</string>
    <string name="icon_item_shopping_cart">ic_action_shopping_cart</string>
    <string name="icon_item_card">ic_action_credit_card</string>
    <string name="icon_item_addresses">ic_action_location</string>
    <string name="icon_item_order_list">ic_action_history</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_shopping</item>
        <!--<item>@string/nav_item_shopping_cart</item>-->
        <item>@string/nav_item_card</item>
        <item>@string/nav_item_addresses</item>
        <item>@string/nav_item_order_list</item>
    </string-array>

    <string-array name="info_labels">
        <item>@string/txt_name</item>
        <item>@string/txt_phone</item>
        <item>@string/txt_email</item>
        <item>@string/txt_nickname</item>
        <item>@string/txt_password</item>
        <item>@string/txt_token</item>
    </string-array>


    <string name="txt_name">name</string>
    <string name="txt_phone">phone</string>
    <string name="txt_email">email</string>
    <string name="txt_nickname">nickname</string>
    <string name="txt_password">password</string>
    <string name="txt_token">token</string>
    <string name="txt_go_to_cart">GO TO CART</string>
    <string name="txt_continue_shopping">CONTINUE SHOPPING</string>
    <string name="txt_change_password">Change Password</string>
    <string name="txt_confirm">Confirm</string>
    <string name="txt_delete">Delete</string>
    <string name="txt_set_as_default">Set as Defalut</string>
    <string name="txt_pay_nopassword">Confirm</string>

    <string-array name="nav_drawer_icons">
        <item>@string/icon_item_home</item>
        <item>@string/icon_item_shopping</item>
        <!--<item>@string/icon_item_shopping_cart</item>-->
        <item>@string/icon_item_card</item>
        <item>@string/icon_item_addresses</item>
        <item>@string/icon_item_order_list</item>
    </string-array>


    <string name="title_shopping">Shopping</string>
    <string name="title_addresses">Addresses</string>
    <string name="title_shopping_cart">Shopping Cart</string>
    <string name="title_card">My Card</string>
    <string name="title_home">Home</string>
    <string name="title_order_list">Order List</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <!--my text-->
    <!--<string name="app_name">app</string>-->
    <!--<string name="action_settings">settings</string>-->
    <!--<string name="action_search">search</string>-->
    <string name="welcome">WELCOME</string>
    <string name="user_name">Username</string>
    <string name="nick_name">Nickname</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="register">register</string>
    <string name="registration">REGISTRATION</string>
    <string name="forget_password">Forget your password?</string>
    <string name="contact_us">Contact us</string>
    <string name="phone_no">Phone No.</string>
    <string name="card_no">Card No.</string>
    <string name="name">Name</string>
    <string name="email">E-mail</string>
    <string name="bank">Bank</string>
    <string name="balance">Balance</string>
    <string name="already_registered">Already have an account?</string>
    <string name="edit_profile">EDIT PROFILE</string>
    <string name="add_card">ADD A CARD</string>
    <string name="edit_card">EDIT CARD</string>
    <string name="del_card">DELETE CARD</string>
    <string name="save">SAVE</string>
    <string name="add">DONE</string>
    <string name="profile">PROFILE</string>
    <string name="change_password">Change Password</string>
</resources>