<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="activity.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="30dp"
            android:layout_weight="10"
            android:background="@color/colorIcons"
            android:orientation="vertical">

            <TextView
                style="@style/subTitle"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimaryDark"
                android:text="@string/title_card" />

            <LinearLayout
                style="@style/input"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ic_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_action_name" />

                    <TextView
                        android:id="@+id/name_tv"
                        style="@style/norm_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/ic_name"
                        android:hint="@string/name" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ic_card"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_action_credit_card" />

                    <TextView
                        android:id="@+id/card_tv"
                        style="@style/norm_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/ic_card"
                        android:hint="@string/card_no" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ic_bank"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_action_bank" />

                    <TextView
                        android:id="@+id/bank_tv"
                        style="@style/norm_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/ic_bank"
                        android:hint="@string/bank" />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/ic_balance"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginTop="8dp"
                        android:src="@drawable/ic_action_money" />
                    <TextView
                        android:id="@+id/balance_tv"
                        style="@style/norm_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@id/ic_balance"
                        android:hint="@string/balance" />
                </RelativeLayout>

                <!--<Button-->
                    <!--android:id="@+id/edit_button"-->
                    <!--style="@style/button"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:background="@color/colorWarning"-->
                    <!--android:text="@string/edit_card"-->
                    <!--android:clickable="true"/>-->
                <Button
                    android:id="@+id/delete_button"
                    style="@style/button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorSecondaryText"
                    android:text="@string/del_card"
                    android:clickable="true"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/colorPrimary"
                android:orientation="vertical">

                <TextView
                    style="@style/tiny"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="0dp"
                    android:gravity="center"
                    android:text="@string/contact_us" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>